<resources>
    <!--<string name="app_name">DianYou</string>-->

    <string name="app_name">点优</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This email username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
    <string name="title_activity_conf">设置</string>
    <string name="desc_no_history">没有历史轨迹</string>
    <string name="title_select_mode">切换模式</string>
    <string name="desc_normal_mode">正常模式</string>
    <string name="desc_less_electricity_mode">省电模式</string>
    <string name="error_username_no_null">用户名不能为空</string>
    <string name="error_name_no_null">名称不能为空</string>
    <string name="error_nickname_no_null">昵称不能为空</string>
    <string name="error_title_no_null">标题不能为空</string>
    <string name="error_password_no_null">密码不能为空</string>
    <string name="error_username_short">用户名太短</string>
    <string name="error_password_short">密码太短</string>
    <string name="error_username_long">用户名太长</string>
    <string name="error_name_long">名称太长</string>
    <string name="error_title_long">标题太长</string>
    <string name="error_nickname_long">昵称太长</string>
    <string name="error_password_long">密码太长</string>
    <string name="error_phone_null">请添加手机号</string>
    <string name="error_phone">手机号格式不对</string>
    <string name="error_password_defference">确认密码不一样</string>
    <string name="success_login">登录成功</string>
    <string name="desc_yes">确定</string>
    <string name="title_aboutus">关于我们</string>
    <string name="title_config">设置</string>
    <string name="title_fence">电子围栏</string>
    <string name="tip_add_fence">请添加围栏</string>
    <string name="desc_edit_mode">编辑模式</string>
    <string name="desc_commit">完成</string>
    <string name="title_fence_list">围栏列表</string>
    <string name="desc_add_fence">添加围栏</string>
    <string name="title_history">历史轨迹</string>
    <string name="title_device_info">设备信息</string>
    <string name="desc_device_unbind">是否解除绑定?</string>
    <string name="desc_cancel">取消</string>
    <string name="title_device_list">设备列表</string>
    <string name="title_device_bind">添加手表</string>
    <string name="tip_input_imei">请输入IMEI号</string>
    <string name="title_location">定位</string>
    <string name="title_login">登录</string>
    <string name="title_setting">设置</string>
    <string name="reset_password">重置密码</string>
    <string name="title_monitor">远程监听</string>
    <string name="title_statistics">统计</string>
    <string name="tip_wait_monitor">等待监听</string>
    <string name="tip_wait_takephoto">等待拍照上传</string>
    <string name="tip_input_number">请添加本机号码</string>
    <string name="title_phone">智能电话</string>
    <string name="desc_number">手机号码</string>
    <string name="desc_get_code">获取验证码</string>
    <string name="desc_second">秒</string>
    <string name="title_register">注册</string>
    <string name="title_scan">扫描二维码</string>
    <string name="tip_not_found_code">未发现二维码</string>
    <string name="title_set_username">设置用户名</string>
    <string name="desc_imei">设备号</string>
    <string name="tip_exit">再按一次退出应用</string>
    <string name="desc_into_fence">进入围栏</string>
    <string name="desc_outo_fence">离开围栏</string>
    <string name="title_select_device">切换设备</string>
    <string name="desc_login_first">请先登录</string>
    <string name="desc_company_ownership">贵州贝思特智能科技有限公司版权所有</string>
    <string name="desc_fence_name">围栏名字</string>
    <string name="desc_select_date">选择时间</string>
    <string name="desc_unbind">解除绑定</string>
    <string name="desc_device_name">设备名称</string>
    <string name="desc_call">拨打</string>
    <string name="desc_code">短信验证码</string>
    <string name="desc_scan_from_photo">从相册选取扫描</string>
    <string name="desc_set_nickname">设置名称</string>
    <string name="desc_set_number">设置号码</string>
    <string name="title_local">定位</string>
    <string name="title_message">消息</string>
    <string name="title_find">发现</string>
    <string name="title_mine">我的</string>
    <string name="title_talkback">语音对讲</string>
    <string name="desc_delete_all">全部删除</string>
    <string name="title_activity_maps">Map</string>
    <string name="desc_no_set">未设置</string>
    <string name="desc_map_type">选择地图类型</string>
    <string name="title_select_map">选择地图类型</string>
    <string name="desc_find_doctor">找医生</string>
    <string name="desc_ask_doctor">问医生</string>
    <string name="desc_health_fitness">健康百科</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_recorder_normal">按住说话</string>
    <string name="str_recorder_recording">松开结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消发送</string>
    <string name="title_forgetpassword">忘记密码</string>
    <string name="tv_password_ok">确认</string>
    <string name="et_again_password">请再次输入密码</string>
    <string name="et_password_new">请输入新密码</string>
    <string name="et_password">4-20位字母、数字</string>
    <string name="tv_password">密码</string>
    <string name="tv_username">手机号</string>
    <string name="et_username">请输入11位手机号</string>
    <string name="et_login_username">手机号</string>
    <string name="et_login_password">密码</string>
    <string name="next">下一步</string>
    <string name="tv_modify">修改</string>
    <string name="tv_newpassword">密码</string>
    <string name="settings">设置</string>
    <string name="et_code">请输入验证码</string>
    <string name="det_historyDate">消除历史信息</string>
    <string name="success_modifypassword">密码修改成功</string>
    <string name="error_code_no_null">验证码不能为空</string>
    <string name="tv_code">验证码</string>
    <string name="check_error">请您检查以上信息是否正确无误</string>
    <string name="textNull">请确保手机号、密码等信息不为空</string>
    <string name="tv_setting">设置</string>
    <string name="manager">管理</string>
    <string name="tv_manager">管理</string>
    <string name="watch_meassage">手表信息</string>
    <string name="watch_contacts">手表通讯录</string>
    <string name="remote_shutdown">远程关机</string>
    <string name="search">找手表</string>
    <string name="manager_setting">管理员设置</string>
    <string name="location_mode">定位模式</string>
    <string name="alarm_setting">闹钟设置</string>
    <string name="free_excuse">免打扰</string>
    <string name="title_topup">充值续费</string>
    <string name="title_activity">活动</string>
    <string name="title_preventseparete">防走散</string>
    <string name="title_takephoto">拍照</string>
    <string name="str_username">用户名:</string>
    <string name="str_nicheng">昵称:</string>
    <string name="title_watchmessage">手表信息</string>
    <string name="title_watchcontact">手表通讯录</string>
    <string name="title_freeexcuse">免打扰</string>
    <string name="title_managerperson">管理员设置</string>
    <string name="title_locationmode">定位模式</string>
    <string name="title_alarmclock">闹钟设置</string>
    <string name="safePattern">安全模式设置成功</string>
    <string name="batteryPattern">省电模式设置成功</string>
    <string name="circle_content">文章内容</string>
    <string name="AddContacts">添加电话</string>
    <string name="bt_Add">添加</string>
    <string name="name">名字</string>
    <string name="phone">电话</string>
    <string name="singleedit">单行输入</string>
    <string name="desc_modifycontacts">修改通讯录</string>
    <string name="set_name">设置名字</string>
    <string name="set_phone">设置号码</string>
    <string name="desc_name">姓名</string>
    <string name="desc_phone">手机号</string>
    <string name="tv_ok">确定</string>
    <string name="addAlarmClock">添加闹钟</string>
    <string name="desc_ModifyAlarmClock">修改闹钟</string>
    <string name="content">请编辑在手表屏幕上显示的文字</string>
    <string name="title_photo_album">相册</string>
    <string name="photo_album">相册</string>
    <string name="recentcall_list">通话记录列表</string>


    // spinner
    <string-array name="spinner1">
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
    </string-array>
    <string-array name="spinner2">
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
    </string-array>

    <!--安全区域-->
    <string name="fend_safety_zone">安全区域</string>
    <string name="fend_home">家</string>
    <string name="fend_school">学校</string>
    <string name="fend_content">如果你无法简洁的表达你的想法，那只说明你还不够了解它。</string>
    <string name="fend_add_safety_zone">添加安全区域</string>

    <string name="device_choose">设备选择</string>


    <string name="picker_time">时间选择器</string>
    <string name="picker_province">条件选择器</string>

    <string name="picker_custom_time">时间选择器自定义布局</string>
    <string name="picker_custom_province">条件选择器自定义布局</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    //statistics
    <string name="read_condition">最近一星期的读书情况</string>
    <string name="reading_times">点读次数</string>
    <string name="last_book">最后读的课本</string>
    <string name="last_book_value">00110</string>
    <string name="most_book">读的最多的课本</string>
    <string name="most_book_value">快乐点播台</string>
    <string name="all_book">总点读课本</string>
    <string name="all_book_value">41</string>
    <string name="all_times">总点读次数</string>
    <string name="all_times_value">21188</string>
    <string name="record_list">点读记录列表</string>
    <string name="reading_how_times">点读22次</string>
    <string name="reading_record_title">学前数学下</string>
    <string name="reading_record_date">2017-08-15  09:39:10</string>
    <string name="action_safefencesetting">安全区域设置</string>
</resources>
