<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_cloud"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_username"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_mid"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_username"
            style="@style/edittext_style"
            android:textColorHint="@color/tv_gray"
            android:layout_width="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/et_username"
            android:inputType="number"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/password"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="32dp"
            android:text="@string/tv_password"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_mid"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <EditText
            android:id="@+id/et_password"
            style="@style/edittext_style"
            android:textColorHint="@color/tv_gray"
            android:layout_width="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_password_ok"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_mid"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="49dp" />

        <EditText
            android:id="@+id/et_again_password"
            style="@style/edittext_style"
            android:textColorHint="@color/tv_gray"
            android:layout_width="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/et_again_password"
            android:inputType="textPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />


        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            style="@style/edittext_style"
            android:hint="@string/desc_code"
            android:textColorHint="@color/tv_tab"
            android:inputType="number"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_code"
            android:layout_marginRight="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_again_password"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/tv_code"
            style="@style/edittext_code_style"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/desc_get_code"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_again_password" />

        <TextView
            android:id="@+id/btn_register"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_mid"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_corners"
            android:gravity="center"
            android:text="@string/title_register"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_code" />
    </android.support.constraint.ConstraintLayout>


</LinearLayout>
