<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_cloud"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_above="@+id/tv_getcode"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/et_login_username"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_mid" />

        <EditText
            android:id="@+id/et_username"
            style="@style/edittext_style"
            android:textColorHint="@color/tv_gray"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView"
            android:hint="@string/et_username"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_getcode"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/et_username"
            android:layout_marginTop="67dp"
            android:background="@drawable/background_corners"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/desc_get_code"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_mid" />
    </RelativeLayout>


</LinearLayout>